# ib-interface

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  run-ticket-plan-flow.md  setup.cfg  setup.py
.cursor/: hooks.json
.cursor/agents/: api-developer.md  chief-quant-architect.md  observability-engineer.md  protocol-developer.md  scrum-master.md  test-developer.md
.cursor/commands/: create-github-issue.md  run-issue-handler.md  run-ticket-plan.md
.cursor/docs/: agent-tools-reference.md
.cursor/hooks/: block-system-commands.sh  enforce-git-standards.sh
.cursor/plans/: api-001_version_update_1a091c2c.plan.md  api-002_order_regulatory_069a8d6e.plan.md  api-003_order_overnight_22620b5f.plan.md  api-004_order_attached_29d87707.plan.md  api-005_order_post-only_a3e6eef5.plan.md  api-006_contractdetails_size_298b2ff9.plan.md  api-007_contractdetails_fund_c5b20d8b.plan.md  api-008_fund_enums_d8559486.plan.md  obs-001_otel_dependencies_899dad42.plan.md  obs-002_telemetry_module_f9949499.plan.md  obs-003_protocol_type_logging_036e4722.plan.md  proto-001_module_structure_fac33c9f.plan.md  proto-002_codec_encode_614da315.plan.md  proto-003_codec_decode_6b32a8be.plan.md  proto-004_message_detection_593c2f6e.plan.md  proto-005_copy_messages_d46c9214.plan.md  proto-006_converter_skeleton_cf882e16.plan.md  proto-007_order_from_proto_b875af92.plan.md  proto-008_order_to_proto_fb00b278.plan.md  proto-009_contract_from_proto_e4c29f80.plan.md  proto-010_bardata_from_proto_17f3fc06.plan.md  proto-011_proto_handlers_dict_2b750de6.plan.md  proto-012_interpret_protobuf_cdb423d6.plan.md  proto-013_order_status_handler_bca745e2.plan.md  proto-014_open_order_handler_5dc9833c.plan.md  proto-015_tick_price_handler_8b92a24b.plan.md  proto-016_config_response_handler_6315ef02.plan.md  scrum-context.md  sprint_1_modernization_e041af8d.plan.md  update_script_and_command_4c067db8.plan.md  (+1 more)
assessment/: AGENT_CREATION_PLAN.md  FEASIBILITY_REPORT.md  IBAPI_PYTHONCLIENT_ASSESSMENT.md  IMPLEMENTATION_REPORT.md  TECHNICAL_ASSESSMENT.md
requirements/: dev.txt
website/: docusaurus.config.ts
(+143 files in other folders)
