[project]
name = "ib-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jxtngx", email = "26209687+jxtngx@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ibapi @ file:///${PROJECT_ROOT}/ibapi/pythonclient",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "protobuf>=5.29.0",
]

[project.scripts]
ib-interface = "ib_interface:main"

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4",
    "black>=26.1.0",
    "coverage>=7.13.4",
    "flake8>=7.3.0",
    "isort>=8.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]


[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
