# Copyright Justin R. Goheen.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib

[options.extras_require]
dev =
    ruff
    black
    flake8
    pytest
    pytest-asyncio
    mypy
    bandit
    coverage
    pre-commit
    isort
docs =
    mkdocs-material
    mkdocstrings[python]
    mkdocs-glightbox
dev-all =
    ib_interface[dev, docs]

[flake8]
max-line-length = 120
extend-ignore = E203

[tool:pytest]
norecursedirs =
    .git
    .github
    *.egg-info
addopts =
    --disable-pytest-warnings
# filterwarnings =

[coverage:run]
disable_warnings = couldnt-parse

[coverage:report]
ignore_errors = True
exclude_lines = pragma: no cover
